fix footer issue on mobile devices, add theme-color for  >= lollipop

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,7 +11,11 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 50px;
+    background-color: #4E5D6C;
+}
+
+.footer > .container {
     background-color: #4E5D6C;
 }
 
